# enum2repr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: convert.rs
