[package]
name = "enum2repr"
version = "0.1.10"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
EnumRepr is a rust derive macro that creates a try_from<T> implementation for an enum with only unit variants. 
All types supported by #[repr(T)] are supported by enum2repr.
"""
homepage = "https://github.com/matthewjberger/enum2repr"
repository = "https://github.com/matthewjberger/enum2repr"
keywords = ["enum", "macro", "byte"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
